# Thesis-Controller

./: CMakeLists.txt  README.md  benchmark_scheduler.py  build.sh  gen_cpu_power_test.py  plot_CPU_power.py  plot_applications_detail.py  plot_final.py  plot_throughput.py  run.sh  run_schedule.py
controller/: CMakeLists.txt  build.sh
controller/common/libs/: CMakeLists.txt
controller/common/libs/FinalPolicy/: CMakeLists.txt
controller/common/libs/FinalPolicy/include/FinalPolicy/: FinalPolicy.h
controller/common/libs/FinalPolicy/src/: FinalPolicy.cc
controller/common/libs/Policies/: CMakeLists.txt
controller/common/libs/Policies/include/Policies/: CpuPowerModelPolicy.h  CpuProfilingPolicy.h  ExamplePolicy.h  GpuInterferencePolicy.h  GpuPowerModelPolicy.h  PowerPredictPolicy.h  SetConfigurationPolicy.h
controller/common/libs/Policies/src/: CpuPowerModelPolicy.cc  CpuProfilingPolicy.cc  ExamplePolicy.cc  GpuInterferencePolicy.cc  GpuPowerModelPolicy.cc  PowerPredictPolicy.cc  SetConfigurationPolicy.cc
controller/common/libs/Utils/: CMakeLists.txt
controller/common/libs/Utils/include/Utils/: ConfigInfo.h  Estimation.h
controller/common/libs/Utils/src/: ConfigInfo.cc  Estimate.cc
controller/controllers/: CMakeLists.txt
controller/controllers/CPU_POWER/: CMakeLists.txt
controller/controllers/CPU_POWER/src/: main.cc
controller/controllers/CPU_PROFILING/: CMakeLists.txt
controller/controllers/CPU_PROFILING/src/: main.cc
controller/controllers/EXAMPLE/: CMakeLists.txt
controller/controllers/EXAMPLE/src/: main.cc
controller/controllers/FINAL/: CMakeLists.txt
controller/controllers/FINAL/src/: main.cc
controller/controllers/GPU_INTERFERENCE/: CMakeLists.txt
controller/controllers/GPU_INTERFERENCE/src/: main.cc
controller/controllers/GPU_POWER/: CMakeLists.txt
controller/controllers/GPU_POWER/src/: main.cc
controller/controllers/POWER_PREDICT/: CMakeLists.txt
controller/controllers/POWER_PREDICT/src/: main.cc
controller/controllers/SET_CONFIGURATION/: CMakeLists.txt
controller/controllers/SET_CONFIGURATION/src/: main.cc
controller/include/ThesisController/: ExamplePolicy.h
controller/src/: ExamplePolicy.cc  SensingPolicy.cc  main.cc
data/schedules/: test_schedule.csv
include/: MonitorPolicy.h
include/ThesisController/: DummyPolicy.h  SensingPolicy.h
libs/MonitorApplication/: CMakeLists.txt
libs/MonitorApplication/include/MonitorApplication/: Monitor.h
libs/MonitorApplication/src/: Monitor.cc
libs/MonitorCommon/: CMakeLists.txt
libs/MonitorCommon/include/MonitorCommon/: Monitor.h  Semaphore.h
libs/MonitorCommon/src/: Semaphore.cc
libs/MonitorController/: CMakeLists.txt
libs/MonitorController/include/MonitorController/: CGroupUtils.h  Monitor.h  Policy.h  Utilization.h
libs/MonitorController/src/: CGroupUtils.cc  Monitor.cc  Utilization.cc
schedules/: test_schedule.csv
scripts/: estimate_interference.py  get_percentage.py
scripts/cutcp_interference/: compute_avgs.py  estimated_interference.csv  interference.csv  interference_schedule_gen.py  n.csv  no_interference.csv  run_schedules.py
scripts/dummy_interference/: compute_avgs.py  interference.csv  interference_schedule_gen.py  no_interference.csv  run_schedules.py  t.csv
scripts/gpu_interference/: compute_avgs.py  plot_interference.py  run_schedules.py  schedules_gen.py  utils.py
scripts/gpu_interference/benchmarks/cutcp/scripts/: utils.py
scripts/gpu_interference/benchmarks/dummy/data/in/: n.csv
scripts/gpu_interference/benchmarks/dummy/scripts/: utils.py
scripts/gpu_interference/benchmarks/nbody/data/in/: n.csv
scripts/gpu_interference/benchmarks/nbody/scripts/: utils.py
scripts/interference/: compute_avgs.py  interference_schedule_gen.py  run_schedules.py  t.csv
scripts/interference/data/: cutcp.csv  nbody.csv
scripts/nbody_interference/: compute_avgs.py  estimated_interference.csv  interference.csv  interference_schedule_gen.py  n.csv  no_interference.csv  plot_interference.py  run_schedules.py
scripts/sgemm_interference/: compute_avgs.py  interference.csv  interference_schedule_gen.py  n.csv  no_interference.csv  run_schedules.py
src/: DummyPolicy.cc  MonitorPolicy.cc  main.cc
